--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -4,6 +4,9 @@
 			<img src="{{logo_url}}" alt="{{t 'logo'}}">
 		{{/link}}
 	</div>
+
+	<include src="header-partial.hbs"></include>
+
 	<div class="nav-wrapper">
 		<span class="icon-menu"></span>
 		<nav class="user-nav" id="user-nav">
