Add copenhagen theme sass files and escape settings variables

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,2 @@
 // This is the standard copenhagen theme css
-// Feel free to edit it, or remove it and use your own
-@import "copenhagen-theme";
+@import "copenhagen/index";
