--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,2 +1,38 @@
-// This is the standard copenhagen theme css
-@import "copenhagen/index";
+@import "copenhagen/variables";
+@import "copenhagen/mixins";
+@import "copenhagen/base";
+@import "copenhagen/buttons";
+@import "copenhagen/tables";
+@import "copenhagen/forms";
+@import "copenhagen/header";
+@import "copenhagen/user";
+@import "copenhagen/footer";
+@import "copenhagen/breadcrumbs";
+@import "copenhagen/search";
+@import "copenhagen/hero";
+@import "copenhagen/page_header";
+@import "copenhagen/sub-nav";
+@import "copenhagen/blocks";
+@import "copenhagen/home-page";
+@import "copenhagen/recent-activity";
+@import "copenhagen/category";
+@import "copenhagen/section";
+@import "copenhagen/article";
+@import "copenhagen/attachments";
+@import "copenhagen/share";
+@import "copenhagen/comments";
+@import "copenhagen/vote";
+@import "copenhagen/actions";
+@import "copenhagen/community";
+@import "copenhagen/striped_list";
+@import "copenhagen/status-label";
+@import "copenhagen/post";
+@import "copenhagen/collapsible-nav";
+@import "copenhagen/collapsible-sidebar";
+@import "copenhagen/my-activities";
+@import "copenhagen/request";
+@import "copenhagen/pagination";
+@import "copenhagen/metadata";
+@import "copenhagen/icons";
+@import "copenhagen/user-profiles";
+@import "copenhagen/search_results"
