--- a/src/sass/copenhagen/_header.scss
+++ b/src/sass/copenhagen/_header.scss
@@ -1,5 +1,5 @@
 /***** Header *****/
-$header-height: 71px;
+$header-height: 80px;
 
 .header {
   @include max-width-container;
@@ -8,69 +8,30 @@ $header-height: 71px;
   display: flex;
   height: $header-height;
   justify-content: space-between;
-}
+  align-items: center;
 
-.logo img {
-  max-height: 37px;
-}
+  &__logo {
 
-.user-nav {
-  @include tablet { position: relative; }
-  display: inline-block;
-  position: absolute;
-  white-space: nowrap;
-
-  &[aria-expanded="true"] {
-    background-color: #fff;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, .15), 0 4px 10px 0 rgba(0, 0, 0, .1);
-    border: solid 1px #ddd;
-    right: 0;
-    left: 0;
-    top: $header-height;
-    z-index: 1;
-
-    > a {
-      display: block;
-      margin: 20px;
+    img {
+      max-height: 40px;
+      width: 100%;
     }
   }
-}
 
-.nav-wrapper {
-  a {
-    @include tablet {
-      display: inline-block;
-    }
+  &__nav {
+    display: flex;
+    align-items: center;
 
-    border: 0;
-    color: $link_color;
-    display: none;
-    font-size: 14px;
-    padding: 0 20px 0 0;
-    width: auto;
+    &-item {
+      margin: 0 16px;
 
-    [dir="rtl"] & { padding: 0 0 0 20px;}
+      &:last-child {
+        margin-right: 0;
+      }
 
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: transparent;
-      color: $link_color;
-      text-decoration: underline;
-    }
-
-    &.login { display: inline-block; }
-  }
-
-  .icon-menu {
-    @include tablet { display: none; }
-    display: inline-block;
-    margin-right: 10px;
-    color: $link_color;
-
-    [dir="rtl"] & {
-      margin-left: 10px;
-      margin-right: 0;
+      * {
+        color: $text-color;
+      }
     }
   }
 }
