--- a/src/sass/copenhagen/_variables.scss
+++ b/src/sass/copenhagen/_variables.scss
@@ -1,10 +1,10 @@
 // Variables
 
 // Colors
-$brand_color: #0072ef !default;
+$brand_color: #0086FF !default;
 $brand_text_color: #fff !default; //Color for text with an accent color background
 $text_color: #333 !default;
-$link_color: #0072ef !default;
+$link_color: #0086FF !default;
 $background_color: #fff !default;
 
 $visited-link-color: zass-darken($link_color, 20%);
@@ -34,8 +34,8 @@ $desktop-width: 1024px;
 $max-width-container: 1160px;
 
 // Fonts
-$heading_font: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif !default;
-$text_font: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif !default;
+$heading_font: 'Roboto', Helvetica, Arial, sans-serif !default;
+$text_font: 'Roboto', Helvetica, Arial, sans-serif !default;
 $font-weight-base: 400;
 $font-weight-light: 300;
 $font-weight-semibold: 600;
