--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,16 +1,19 @@
 <header class="header">
-	<div class="logo">
+	<div class="header__logo">
 		{{#link 'help_center'}}
 			<img src="{{logo_url}}" alt="{{t 'logo'}}">
 		{{/link}}
 	</div>
 
-	<div class="nav-wrapper">
-		<span class="icon-menu"></span>
-		<nav class="user-nav" id="user-nav">
-			{{link 'community'}}
-			{{link 'new_request' class='submit-a-request'}}
-		</nav>
-		{{user_info}}
-	</div>
+	<ul class="header__nav">
+		<li class="header__nav-item">
+			{{link 'help_center'}}
+		</li>
+		<li class="header__nav-item">
+			<a href="{{page_path 'new_request'}}">{{t 'submit_a_request'}}</a>
+		</li>
+		<li class="header__nav-item">
+			{{user_info}}
+		</li>
+	</ul>
 </header>
