--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,38 +1,38 @@
-@import "copenhagen/variables";
-@import "copenhagen/mixins";
-@import "copenhagen/base";
-@import "copenhagen/buttons";
-@import "copenhagen/tables";
-@import "copenhagen/forms";
-@import "copenhagen/header";
-@import "copenhagen/user";
-@import "copenhagen/footer";
-@import "copenhagen/breadcrumbs";
-@import "copenhagen/search";
-@import "copenhagen/hero";
-@import "copenhagen/page_header";
-@import "copenhagen/sub-nav";
-@import "copenhagen/blocks";
-@import "copenhagen/home-page";
-@import "copenhagen/recent-activity";
-@import "copenhagen/category";
-@import "copenhagen/section";
-@import "copenhagen/article";
-@import "copenhagen/attachments";
-@import "copenhagen/share";
-@import "copenhagen/comments";
-@import "copenhagen/vote";
-@import "copenhagen/actions";
-@import "copenhagen/community";
-@import "copenhagen/striped_list";
-@import "copenhagen/status-label";
-@import "copenhagen/post";
-@import "copenhagen/collapsible-nav";
-@import "copenhagen/collapsible-sidebar";
-@import "copenhagen/my-activities";
-@import "copenhagen/request";
-@import "copenhagen/pagination";
-@import "copenhagen/metadata";
-@import "copenhagen/icons";
-@import "copenhagen/user-profiles";
-@import "copenhagen/search_results"
+@import "cloudhuset/variables";
+@import "cloudhuset/mixins";
+@import "cloudhuset/base";
+@import "cloudhuset/buttons";
+@import "cloudhuset/tables";
+@import "cloudhuset/forms";
+@import "cloudhuset/header";
+@import "cloudhuset/user";
+@import "cloudhuset/footer";
+@import "cloudhuset/breadcrumbs";
+@import "cloudhuset/search";
+@import "cloudhuset/hero";
+@import "cloudhuset/page_header";
+@import "cloudhuset/sub-nav";
+@import "cloudhuset/blocks";
+@import "cloudhuset/home-page";
+@import "cloudhuset/recent-activity";
+@import "cloudhuset/category";
+@import "cloudhuset/section";
+@import "cloudhuset/article";
+@import "cloudhuset/attachments";
+@import "cloudhuset/share";
+@import "cloudhuset/comments";
+@import "cloudhuset/vote";
+@import "cloudhuset/actions";
+@import "cloudhuset/community";
+@import "cloudhuset/striped_list";
+@import "cloudhuset/status-label";
+@import "cloudhuset/post";
+@import "cloudhuset/collapsible-nav";
+@import "cloudhuset/collapsible-sidebar";
+@import "cloudhuset/my-activities";
+@import "cloudhuset/request";
+@import "cloudhuset/pagination";
+@import "cloudhuset/metadata";
+@import "cloudhuset/icons";
+@import "cloudhuset/user-profiles";
+@import "cloudhuset/search_results";
