--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -1,44 +1,38 @@
-<section class="hero">
-	<div class="hero__inner">
-		<h1 class="hero__text">Search the help center</h1>
-		{{search submit=false instant=true class='search search-full'}}
-	</div>
-</section>
+<include src="hero-partial.hbs"></include>
 
 <div class="container">
-
-		<section class="categories blocks">
-			<ul class="blocks-list">
-				{{#each categories}}
-					{{#if ../has_multiple_categories}}
-						<li class="blocks__item">
-							<a href='{{url}}' class="blocks__item-link">
-								<each loop="cat in categories">
-									{{#is id {{% cat.id %}} }}
-										<img src="{{asset '{{% cat.icon %}}'}}" class="blocks__item-icon" />
-									{{/is}}
-								</each>
-								<h4 class="blocks__item-title">{{name}}</h4>
+	<section class="categories blocks">
+		<ul class="blocks-list">
+			{{#each categories}}
+				{{#if ../has_multiple_categories}}
+					<li class="blocks__item">
+						<a href='{{url}}' class="blocks__item-link">
+							<each loop="cat in categories">
+								{{#is id {{% cat.id %}} }}
+									<img src="{{asset '{{% cat.icon %}}'}}" class="blocks__item-icon" />
+								{{/is}}
+							</each>
+							<h4 class="blocks__item-title">{{name}}</h4>
+							<p class="blocks__item-description">{{excerpt description}}</p>
+						</a>
+					</li>
+				{{else}}
+					{{#each sections}}
+						<li class="blocks__item {{#if internal}}blocks__item--internal{{/if}}">
+							<a href='{{url}}' class="blocks-item-link">
+								<h4 class="blocks__item-title">
+									{{name}}
+									{{#if internal}}
+										<span class="icon-lock" title="{{t 'internal'}}"></span>
+									{{/if}}
+								</h4>
 								<p class="blocks__item-description">{{excerpt description}}</p>
 							</a>
 						</li>
-					{{else}}
-						{{#each sections}}
-							<li class="blocks__item {{#if internal}}blocks__item--internal{{/if}}">
-								<a href='{{url}}' class="blocks-item-link">
-									<h4 class="blocks__item-title">
-										{{name}}
-										{{#if internal}}
-											<span class="icon-lock" title="{{t 'internal'}}"></span>
-										{{/if}}
-									</h4>
-									<p class="blocks__item-description">{{excerpt description}}</p>
-								</a>
-							</li>
-						{{/each}}
-					{{/if}}
-				{{/each}}
-			</ul>
-			{{pagination}}
-		</section>
+					{{/each}}
+				{{/if}}
+			{{/each}}
+		</ul>
+		{{pagination}}
+	</section>
 </div>
