--- a/src/sass/cloudhuset/_page_header.scss
+++ b/src/sass/cloudhuset/_page_header.scss
@@ -3,8 +3,7 @@
 
   @include tablet {
     align-items: baseline;
-    flex-direction: row;
-    margin: 0;
+    margin: 0 0 20px 0;
   }
 
   display: flex;
