--- a/src/sass/cloudhuset/_search.scss
+++ b/src/sass/cloudhuset/_search.scss
@@ -4,7 +4,7 @@
 
   input[type="search"] {
     border: 1px solid $border-color;
-    border-radius: 30px;
+    border-radius: 5px;
     box-sizing: border-box;
     color: $field-text-color;
     height: 40px;
@@ -12,6 +12,7 @@
     padding-right: 20px;
     -webkit-appearance: none;
     width: 100%;
+    background: #f5f5f5;
 
     [dir="rtl"] & {
       padding-right: 40px;
@@ -28,8 +29,7 @@
   &::before {
     @extend .icon;
     @include vertical-align;
-    background-color: #fff;
-    color: #ddd;
+    color: #999;
     content: "\1F50D";
     font-size: 18px;
     position: absolute;
