--- a/src/sass/cloudhuset/_section.scss
+++ b/src/sass/cloudhuset/_section.scss
@@ -2,14 +2,16 @@
 .section {
   &-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
   }
 
   &-content {
     @include desktop {
-      flex: 0 0 80%;
+      max-width: 45%;
     }
-    flex: 1;
+
+    max-width: none;
+    width: 100%;
   }
 
   &-subscribe {
