--- a/src/sass/cloudhuset/_variables.scss
+++ b/src/sass/cloudhuset/_variables.scss
@@ -7,12 +7,12 @@ $text_color: #333 !default;
 $link_color: #0086FF !default;
 $background_color: #fff !default;
 
-$visited-link-color: zass-darken($link_color, 20%);
-$hover-button-color: zass-darken($brand_color, 20%);
-$secondary-text-color: zass-lighten($text_color, 20%);
+$visited-link-color: darken($link_color, 20%);
+$hover-button-color: darken($brand_color, 20%);
+$secondary-text-color: lighten($text_color, 20%);
 
-$primary-shade: zass-darken($background_color, 3%); //#f8f8f8 for the default background_color
-$secondary-shade: zass-darken($background_color, 5%); //#f2f2f2 for the default background_color
+$primary-shade: darken($background_color, 3%); //#f8f8f8 for the default background_color
+$secondary-shade: darken($background_color, 5%); //#f2f2f2 for the default background_color
 
 $font-size-bigger: 16px;
 $font-size-base: 15px;
