--- a/src/templates/article_page.hbs
+++ b/src/templates/article_page.hbs
@@ -1,44 +1,27 @@
 <div class="container-divider"></div>
 <div class="container">
-	<nav class="sub-nav">
-		{{breadcrumbs}}
-		{{search scoped=true submit=false}}
-	</nav>
+
+	<include src="subnav-partial.hbs"></include>
 
 	<div class="article-container" id="article-container">
-		<section class="article-sidebar">
-			<section class="section-articles collapsible-sidebar">
-				<h3 class="collapsible-sidebar-title sidenav-title">{{t 'articles_in_section'}}</h3>
-				<ul>
-					{{#each section.articles}}
-						<li>
-							<a href="{{url}}" class="sidenav-item {{#is id ../article.id}}current-article{{/is}}">{{title}}</a>
-						</li>
-					{{/each}}
-				</ul>
-				{{#if section.more_articles}}
-					<a href="{{section.url}}" class="article-sidebar-item">{{t 'see_more'}}</a>
-				{{/if}}
-			</section>
-		</section>
 
 		<article class="article">
-			<header class="article-header">
-				<h1 title="{{article.title}}" class="article-title">
+			<header class="article__header">
+				<h1 title="{{article.title}}" class="article__title">
 					{{article.title}}
 					{{#if article.internal}}
 						<span class="icon-lock" title="{{t 'internal'}}"></span>
 					{{/if}}
 				</h1>
 
-				<div class="article-author">
-					<div class="avatar article-avatar">
+				<div class="article__author">
+					<div class="avatar article__author-avatar">
 						{{#if article.author.agent}}
 							<span class="icon-agent"></span>
 						{{/if}}
 						<img src="{{article.author.avatar_url}}" alt="Avatar" class="user-avatar"/>
 					</div>
-					<div class="article-meta">
+					<div class="article__meta">
 						{{#link 'user_profile' id=article.author.id}}
 							{{article.author.name}}
 						{{/link}}
@@ -206,5 +189,22 @@
 				</section>
 			</div>
 		</article>
+
+		<section class="article-sidebar">
+			<section class="section-articles collapsible-sidebar">
+				<h3 class="collapsible-sidebar-title sidenav-title">{{t 'articles_in_section'}}</h3>
+				<ul>
+					{{#each section.articles}}
+						<li>
+							<a href="{{url}}" class="sidenav-item {{#is id ../article.id}}current-article{{/is}}">{{title}}</a>
+						</li>
+					{{/each}}
+				</ul>
+				{{#if section.more_articles}}
+					<a href="{{section.url}}" class="article-sidebar-item">{{t 'see_more'}}</a>
+				{{/if}}
+			</section>
+		</section>
+
 	</div>
 </div>
