--- a/src/templates/search_results.hbs
+++ b/src/templates/search_results.hbs
@@ -1,9 +1,6 @@
 <div class="container-divider"></div>
 <div class="container">
-	<nav class="sub-nav">
-		{{breadcrumbs}}
-		{{search submit=false}}
-	</nav>
+	<include src="subnav-partial.hbs"></include>
 
 	<header class="page-header">
 		<h1>{{t 'search_results'}}</h1>
@@ -19,10 +16,12 @@
 				<ul class="search-results-list">
 					{{#each article_results}}
 						<li class="search-result">
-							<a href="{{url}}" class="search-result-link">{{title}}</a>
-							{{#if vote_sum}}
-								<span class="search-result-votes meta-count">{{vote_sum}}</span>
-							{{/if}}
+							<a href="{{url}}" class="search-result-link">
+								{{title}}
+								{{#if vote_sum}}
+									<span class="search-result-votes meta-count">{{vote_sum}}<i class="material-icons md-18">thumb_up</i></span>
+								{{/if}}
+							</a>
 							<ul class="meta-group">
 								<li>
 									<ol class="breadcrumbs search-result-breadcrumbs">
