--- a/src/templates/section_page.hbs
+++ b/src/templates/section_page.hbs
@@ -1,44 +1,44 @@
 <div class="container-divider"></div>
 <div class="container">
-	<nav class="sub-nav">
-		{{breadcrumbs}}
-		{{search submit=false}}
-	</nav>
+	<include src="subnav-partial.hbs"></include>
+
+	<header class="page-header">
+		<h1>
+			{{section.name}}
+			{{#if section.internal}}
+				<span class="icon-lock" title="{{t 'internal'}}"></span>
+			{{/if}}
+		</h1>
+		{{#if section.description}}
+			<p class="page-header-description">{{section.description}}</p>
+		{{/if}}
+		{{subscribe}}
+	</header>
 
 	<div class="section-container">
 		<section class="section-content">
-			<header class="page-header">
-				<h1>
-					{{section.name}}
-					{{#if section.internal}}
-						<span class="icon-lock" title="{{t 'internal'}}"></span>
-					{{/if}}
-				</h1>
-				{{subscribe}}
-				{{#if section.description}}
-					<p class="page-header-description">{{section.description}}</p>
-				{{/if}}
-			</header>
-
 
 			{{#if section.articles}}
 				<ul class="article-list">
 					{{#each section.articles}}
-						<li class="article-list-item {{#if promoted}} article-promoted{{/if}}">
-							{{#if promoted}}
-								<span data-title="{{t 'promoted'}}" class="icon-star"></span>
-							{{/if}}
-							<a href="{{url}}" class="article-list-link">{{title}}</a>
+						<li class="article-list__item {{#if promoted}} article--promoted{{/if}}">
+							<a href="{{url}}" class="article-list__link">
+								{{title}}
+								{{#if promoted}}
+									<i class="material-icons md-18">grade</i>
+								{{/if}}	
+							</a>
 						</li>
 					{{/each}}
 				</ul>
 			{{else}}
-				<i class="section-empty">
+				<i class="section--empty">
 					<a href="{{section.url}}">{{t 'empty'}}</a>
 				</i>
 			{{/if}}
 
 			{{pagination}}
+
 		</section>
 	</div>
 </div>
