--- a/src/sass/cloudhuset/_sub-nav.scss
+++ b/src/sass/cloudhuset/_sub-nav.scss
@@ -11,6 +11,12 @@
   min-height: 50px;
   padding-bottom: 15px;
 
+  .search {
+    @include tablet {
+      width: 34%;
+    }
+  }
+
   //Inner pages search field
   input[type="search"] {
     @include tablet {
