--- a/src/templates/category_page.hbs
+++ b/src/templates/category_page.hbs
@@ -13,7 +13,7 @@
 
 		<div class="category-content">
 
-			<div class="section-tree">
+			<div class="sections">
 				{{#each sections}}
 					<section class="section">
 						<h3 class="section__title">
