--- a/src/templates/section_page.hbs
+++ b/src/templates/section_page.hbs
@@ -6,7 +6,7 @@
 		<h1>
 			{{section.name}}
 			{{#if section.internal}}
-				<span class="icon-lock" title="{{t 'internal'}}"></span>
+				<i class="material-icons md-24">lock</i>
 			{{/if}}
 		</h1>
 		{{#if section.description}}
