--- a/src/sass/cloudhuset/_base.scss
+++ b/src/sass/cloudhuset/_base.scss
@@ -12,11 +12,13 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   display: flex;
+  height: 100%;
   min-height: 100vh;
   flex-direction: column;
 
   > main {
-    flex: 1;
+    flex: 1 0 auto;
+    width: 100%;
     margin-bottom: 60px;
   }
 }
