--- a/src/sass/cloudhuset/_blocks.scss
+++ b/src/sass/cloudhuset/_blocks.scss
@@ -1,6 +1,6 @@
 /***** Blocks *****/
 /* Used in Homepage#categories and Community#topics */
-.blocks {
+.category {
   &-list {
     @include tablet {
       margin: 0 -15px;
@@ -11,84 +11,86 @@
     justify-content: flex-start;
     list-style: none;
     padding: 0;
-  }
 
-  &__item {
-    @include tablet {
-      flex-basis: 33.33%;
+    &__item {
+      @include tablet {
+        flex-basis: 33.33%;
+        border-right: 1px solid $border-color;
+        border-bottom: none;
+        margin-bottom: 30px;
+      }
+      
+      box-sizing: border-box;
+      color: $text-color;
+      display: flex;
+      flex-basis: 100%;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 100%;
+      text-align: center;
+      transition: color 300ms ease;
+      border-bottom: 1px solid $border-color;
+
+      &:nth-child(3n) {
+        border-right: none;
+      }
+
+      &:last-child {
+        border: none;
+      }
+
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: #F7F7F7;
+
+        * {
+          text-decoration: none;
+        }
+      }
+
+      &--internal {
+        background-color: transparent;
+        border: 1px solid $border-color;
+
+        .icon-lock::before {
+          content: "\1F512";
+          font-size: 15px;
+          bottom: 5px;
+          position: relative;
+        }
+
+        a { color: $text_color; }
+      }
+
+      &-icon {
+        width: 48px;
+        margin-bottom: 16px;
+      }
     }
-    
-    box-sizing: border-box;
-    color: $text-color;
-    display: flex;
-    flex-basis: 100%;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 100%;
-    text-align: center;
-    transition: color 300ms ease;
-    border-right: 1px solid $border-color;
-    margin-bottom: 24px;
 
-    &:nth-child(3n) {
-      border: none;
-    }
+    &__item-link {
+      color: $text-color;
+      padding: 32px;
 
-    &:last-child {
-      border: none;
-    }
-
-    &:hover,
-    &:focus,
-    &:active {
-      background-color: #F7F7F7;
-
-      * {
+      &:hover,
+      &:focus,
+      &:active {
         text-decoration: none;
       }
     }
 
-    &--internal {
-      background-color: transparent;
-      border: 1px solid $border-color;
-
-      .icon-lock::before {
-        content: "\1F512";
-        font-size: 15px;
-        bottom: 5px;
-        position: relative;
-      }
-
-      a { color: $text_color; }
+    &__item-title {
+      margin-bottom: 0;
     }
 
-    &-icon {
-      width: 48px;
-      margin-bottom: 16px;
+    &__item-description {
+      font-weight: $font-weight-light;
+      margin: 0;
     }
-  }
 
-  &__item-link {
-    color: $text-color;
-    padding: 32px;
-
-    &:hover,
-    &:focus,
-    &:active {
-      text-decoration: none;
+    &__item-description:not(:empty) {
+      margin-top: 10px;
     }
-  }
-
-  &__item-title {
-    margin-bottom: 0;
-  }
-
-  &__item-description {
-    font-weight: $font-weight-light;
-    margin: 0;
-  }
-
-  &__item-description:not(:empty) {
-    margin-top: 10px;
   }
 }
