--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -1,32 +1,32 @@
 <include src="hero-partial.hbs"></include>
 
 <div class="container">
-	<section class="categories blocks">
-		<ul class="blocks-list">
+	<section class="categories">
+		<ul class="category-list">
 			{{#each categories}}
 				{{#if ../has_multiple_categories}}
-					<li class="blocks__item">
-						<a href='{{url}}' class="blocks__item-link">
+					<li class="category-list__item">
+						<a href='{{url}}' class="category-list__item-link">
 							<each loop="cat in categories">
 								{{#is id {{% cat.id %}} }}
-									<img src="{{asset '{{% cat.icon %}}'}}" class="blocks__item-icon" />
+									<img src="{{asset '{{% cat.icon %}}'}}" class="category-list__item-icon" />
 								{{/is}}
 							</each>
-							<h4 class="blocks__item-title">{{name}}</h4>
-							<p class="blocks__item-description">{{excerpt description}}</p>
+							<h4 class="category-list__item-title">{{name}}</h4>
+							<p class="category-list__item-description">{{excerpt description}}</p>
 						</a>
 					</li>
 				{{else}}
 					{{#each sections}}
-						<li class="blocks__item {{#if internal}}blocks__item--internal{{/if}}">
-							<a href='{{url}}' class="blocks-item-link">
-								<h4 class="blocks__item-title">
+						<li class="category-list__item {{#if internal}}category-list__item--internal{{/if}}">
+							<a href='{{url}}' class="category-list-item-link">
+								<h4 class="category-list__item-title">
 									{{name}}
 									{{#if internal}}
 										<span class="icon-lock" title="{{t 'internal'}}"></span>
 									{{/if}}
 								</h4>
-								<p class="blocks__item-description">{{excerpt description}}</p>
+								<p class="category-list__item-description">{{excerpt description}}</p>
 							</a>
 						</li>
 					{{/each}}
