--- a/src/sass/cloudhuset/_header.scss
+++ b/src/sass/cloudhuset/_header.scss
@@ -10,6 +10,7 @@ $header-height: 80px;
   justify-content: space-between;
   align-items: center;
   position: relative;
+  width: 100%;
 
   &__logo {
 
@@ -18,31 +19,47 @@ $header-height: 80px;
     }
   }
 
-  &__nav {
-    @include tablet {
-      position: static;
-      flex-wrap: nowrap;
-      width: auto;
-    }
-
+  &__right {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    position: fixed;
+  }
+
+  &__nav {
+    position: absolute;
     top: $header-height;
     left: 0;
     right: 0;
     width: 100%;
+    background: #FFF;
+    z-index: 99;
+    text-align: center;
+    padding: 0 24px 24px 24px;
+    display: none;
+
+    @include tablet {
+      position: static;
+      flex-wrap: nowrap;
+      width: auto;
+      background: transparent;
+      padding: 0;
+      display: flex!important;
+      flex-wrap: wrap;
+      align-items: center;
+    }
 
     &-item {
       @include tablet {
         width: auto;
+        margin-right: 30px;
+        padding: 0;
+        border: none;
       }
       width: 100%;
-      margin: 0 16px;
+      padding: 16px 0;
+      border-bottom: 1px solid $border-color;
 
       &:last-child {
-        margin-right: 0;
+        border: none;
       }
 
       * {
@@ -54,5 +71,43 @@ $header-height: 80px;
         }
       }
     }
+  }
+
+  &__user-info {
+    display: flex;
+    align-items: center;
+  }
+
+  &__nav-toggle {
+    @include tablet {
+      display: none;
+    }
+    
+    margin-left: 16px;
+  }
+
+  #toggle {
+    width: 24px;
+  }
+  
+  #toggle div {
+    width: 100%;
+    height: 3px;
+    background: $text-color;
+    margin: 6px auto;
+    transition: all 0.3s;
+    backface-visibility: hidden;
+  }
+  
+  #toggle.on .one {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+  
+  #toggle.on .two {
+    opacity: 0;
+  }
+  
+  #toggle.on .three {
+    transform: rotate(-45deg) translate(7px, -8px);
   }
 }
