--- a/src/sass/cloudhuset/_page_header.scss
+++ b/src/sass/cloudhuset/_page_header.scss
@@ -2,8 +2,8 @@
 .page-header {
 
   @include tablet {
-    align-items: baseline;
-    margin: 0 0 20px 0;
+    align-items: flex-start;
+    margin: 0 0 30px 0;
   }
 
   display: flex;
