--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -5,15 +5,32 @@
 		{{/link}}
 	</div>
 
-	<ul class="header__nav">
-		<li class="header__nav-item">
-			{{link 'help_center'}}
-		</li>
-		<li class="header__nav-item">
-			<a href="{{page_path 'new_request'}}">{{t 'submit_a_request'}}</a>
-		</li>
-		<li class="header__nav-item">
+	<div class="header__right">
+
+		<ul class="header__nav">
+			<li class="header__nav-item">
+				{{link 'help_center'}}
+			</li>
+			<li class="header__nav-item">
+				<a href="{{page_path 'new_request'}}">{{t 'submit_a_request'}}</a>
+			</li>
+		</ul>
+		<div class="header__user-info">
 			{{user_info}}
-		</li>
-	</ul>
+		</div>
+		<div class="header__nav-toggle">
+			<div id="toggle">
+				<div class="one"></div>
+				<div class="two"></div>
+				<div class="three"></div>
+			</div>
+		</div>
+	</div>
+
+	<script>
+		$("#toggle").click(function() {
+			$(this).toggleClass("on");
+			$(".header__nav").slideToggle();
+		});
+	</script>
 </header>
