--- a/src/templates/community_topic_page.hbs
+++ b/src/templates/community_topic_page.hbs
@@ -5,7 +5,7 @@
 		{{search scoped=true submit=false}}
 	</nav>
 
-	<header class="page-header">
+	<header class="page-header community-header">
 		<h1>
 			{{topic.name}}
 			{{#if topic.internal}}
