--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -19,7 +19,7 @@
 				{{else}}
 					{{#each sections}}
 						<li class="category-list__item {{#if internal}}category-list__item--internal{{/if}}">
-							<a href='{{url}}' class="category-list-item-link">
+							<a href='{{url}}' class="category-list__item-link">
 								<h4 class="category-list__item-title">
 									{{name}}
 									{{#if internal}}
