--- a/src/templates/community_post_list_page.hbs
+++ b/src/templates/community_post_list_page.hbs
@@ -1,13 +1,12 @@
 <section class="section hero community-hero">
-	<div class="hero-inner">
+	<div class="hero__inner">
+		<h1 class="hero__text">Search community</h1>
 		{{search submit=false class='search search-full' scoped=true}}
 	</div>
 </section>
 
 <div class="container">
-	<nav class="sub-nav">
-		{{breadcrumbs}}
-	</nav>
+	<include src="subnav-partial.hbs"></include>
 
 	<header class="page-header community-header">
     <span class="dropdown">
