--- a/src/templates/article_page.hbs
+++ b/src/templates/article_page.hbs
@@ -191,6 +191,11 @@
 		</article>
 
 		<section class="article__sidebar">
+			<section class="category-tree">
+				<h3 class="collapsible-sidebar-title sidenav-title">Kategori-liste</h3>
+				<ul id="category-list">
+				</ul>
+			</section>
 			<section class="section-articles collapsible-sidebar">
 				<h3 class="collapsible-sidebar-title sidenav-title">{{t 'articles_in_section'}}</h3>
 				<ul>
