Adds individual Javascript files for each page template, allowing ES6 to be written and transpiled down via Gulp

--- a/src/templates/category_page.hbs
+++ b/src/templates/category_page.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/category_page.js">
+</head>
 <div class="container-divider"></div>
 <div class="container">
 	<include src="subnav-partial.hbs"></include>
