--- a/src/templates/community_post_page.hbs
+++ b/src/templates/community_post_page.hbs
@@ -1,3 +1,7 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/community_post_page.js">
+</head>
+
 <div class="container-divider"></div>
 <div class="container">
 	<nav class="sub-nav">
