--- a/src/templates/error_page.hbs
+++ b/src/templates/error_page.hbs
@@ -1,3 +1,7 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/error_page.js">
+</head>
+
 <div class="container-divider"></div>
 <div class="error-page">
 	<h1>{{t 'oops'}}</h1>
