--- a/src/templates/header.hbs
+++ b/src/templates/header.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/header.js">
+</head>
 <header class="header">
 	<div class="header__logo">
 		{{#link 'help_center'}}
