--- a/src/templates/home_page.hbs
+++ b/src/templates/home_page.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/home_page.js">
+</head>
 <include src="hero-partial.hbs"></include>
 
 <div class="container">
