--- a/src/templates/requests_page.hbs
+++ b/src/templates/requests_page.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/requests_page.js">
+</head>
 <nav class="my-activities-nav collapsible-nav">
 	<ul class="collapsible-nav-list container">
 		<li aria-selected=true>{{t 'requests'}}</li>
