--- a/src/templates/user_profile_page.hbs
+++ b/src/templates/user_profile_page.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/user_profile_page.js">
+</head>
 <header class="profile-header">
 	<div class="container">
 		<div class="profile-info">
