--- a/src/templates/article_page.hbs
+++ b/src/templates/article_page.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/article_page.js">
+</head>
 <div class="container-divider"></div>
 <div class="container">
 
