--- a/src/templates/community_topic_page.hbs
+++ b/src/templates/community_topic_page.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/community_topic_page.js">
+</head>
 <div class="container-divider"></div>
 <div class="container">
 	<nav class="sub-nav">
