--- a/src/templates/footer.hbs
+++ b/src/templates/footer.hbs
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" type="text/css" href="../template-js/footer.js">
+</head>
 <footer class="footer">
 	<div class="footer-inner">
 		{{#link 'help_center'}}{{help_center.name}}{{/link}}
